# blog-flask-pydantic-pytest

./: README.md  database.db  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: lint.sh
src/: app.py  commands.py  models.py  queries.py
tests/: test_app.py  test_commands.py  test_queries.py
