[tool.poetry]
name = "blog-flask-pydantic-pytest"
version = "0.1.0"
description = "A Flask blog app that uses pydantic for validation and pytest for testing."
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
